Bug 336765 - Missing 'Producer' info when importing from IMDb and TMDB
Summary: Missing 'Producer' info when importing from IMDb and TMDB
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.9
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-26 17:42 UTC by Paul
Modified: 2014-10-11 18:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul 2014-06-26 17:42:08 UTC
Having updated Tellico to V2.3.9 (from 2.3.8) there were a lot of movie entries that I needed to update due to Bug 325637 (Cast not being imported from IMDb)

Checking these afterwards it became apparent the behaviour of 'Producer' import is not correct either.

I have Tellico set-up with the 'Producer' field as 'Simple Text' and 'Allow Multiple Values'.

Using 'Babel' ( http://akas.imdb.com/title/tt0449467/ ) as an example.

Previously (coinciding with Bug 325637 ?) this would have been the imported data:

"Corinne Golden Weber; Ann Ruark; Jon Kilik; Steve Golin; Alejandro González Iñárritu"

The behaviour now is as follows:

IMDb - No 'Producer' imported.

TMDb - Only the last listed instance of (multiple) 'Producers' is shown. (Using the example given, "Alejandro González Iñárritu")
Comment 1 Robby Stephenson 2014-10-11 18:15:27 UTC
Git commit b56e8edb38efc26132167dbe4091bd3e98672f0a by Robby Stephenson.
Committed on 11/10/2014 at 18:10.
Pushed by rstephenson into branch '2.3'.

Update the IMDb and TMDb fetchers for correct producer

IMDb wasn't looking for producers at all and TheMovieDB wasn't
allowing for multiple directors, producers, writer, or composers.
FIXED-IN: 2.3.10

M  +4    -0    ChangeLog
M  +46   -2    src/fetch/imdbfetcher.cpp
M  +1    -0    src/fetch/imdbfetcher.h
M  +10   -5    src/fetch/themoviedbfetcher.cpp
M  +21   -0    src/tests/imdbfetchertest.cpp
M  +1    -0    src/tests/imdbfetchertest.h
M  +18   -1    src/tests/themoviedbfetchertest.cpp
M  +1    -0    src/tests/themoviedbfetchertest.h

http://commits.kde.org/tellico/b56e8edb38efc26132167dbe4091bd3e98672f0a