Update the IMDb and TMDb fetchers for correct producer

IMDb wasn't looking for producers at all and TheMovieDB wasn't
allowing for multiple directors, producers, writer, or composers.

BUG: 336765
FIXED-IN: 2.3.10